--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: "Dr. Michael Schlottke-Lakemper" # Website name
+title: "Matteo Fincato" # Website name
 baseurl: 'https://lakemper.eu/' # Website URL
 copyright: "&copy; {year} Michael Schlottke-Lakemper" # Footer text, e.g. '© {year} Me'
 
