--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -158,3 +158,10 @@ cms:
 icon:
   pack:
     ai: true
+
+extensions:
+  cms:
+    branch: main
+    local_backend: false
+  academicons:
+    enable: true
