--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,12 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
+  - name: News
+    url: '#news'
+    weight: 45
+ - name: Experience
+   url: '#experience'
+   weight: 20
 #  - name: Projects
 #    url: '#projects'
 #    weight: 30
@@ -19,12 +22,9 @@ main:
   - name: Publications
     url: '#publications'
     weight: 40
-  - name: Teaching
-    url: '#teaching'
-    weight: 45
-  - name: Personal Blog
-    url: '#blog'
-    weight: 50
+  # - name: Personal Blog
+  #   url: '#blog'
+  #   weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
